syntax = "proto3";

option csharp_namespace = "EWWorkhorse";

// The greeting service definition.
service FileExchanger {
  // Sends a greeting
  rpc ProcessFiles (ProcessingRequest) returns (ProcessingResult);
}

// The request message containing the user's name.
message ProcessingRequest {
  bytes wordBytes = 1;
  bytes excelBytes = 2;
}

// The response message containing the greetings.
message ProcessingResult {
  bytes resultWordBytes = 1;
}
